objects/umZone__c.object
<CustomObject><fields>
        <fullName>announcementsKaId__c</fullName>
        <description>Zone header Knowledge Article Version (if announcements enabled).</description>
        <inlineHelpText>Zone header Knowledge Article Version (if announcements enabled).</inlineHelpText>
        <label>Announcements Knowledge Article Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable / Disable announcements in zone header.</description>
        <inlineHelpText>Enable / Disable announcements in zone header.</inlineHelpText>
        <label>Announcements Enabled</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>backgroundColor__c</fullName>
        <description>Zone header background color (if no background image specified) in hex format (example #FFF).</description>
        <inlineHelpText>Zone header background color (if no background image specified) in hex format (example #FFF).</inlineHelpText>
        <label>Background color</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>backgroundImage__c</fullName>
        <description>Background image to be displayed in zone header (mobile).</description>
        <inlineHelpText>Background image to be displayed in zone header (mobile).</inlineHelpText>
        <label>Background image</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>dataCategory__c</fullName>
        <description>Data category Unique name related to this zone.</description>
        <inlineHelpText>Data category Unique name related to this zone.</inlineHelpText>
        <label>Data Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>iconImage__c</fullName>
        <label>iconImage</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>publicName__c</fullName>
        <description>Name to be displayed in mobile application.</description>
        <inlineHelpText>Name to be displayed in mobile application.</inlineHelpText>
        <label>Public name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>searchBannerLabel__c</fullName>
        <description>Zone header search banner label.</description>
        <inlineHelpText>Zone header search banner label.</inlineHelpText>
        <label>Search banner label</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>umSite_id__c</fullName>
        <description>Id of the parent (umSite custom setting).</description>
        <inlineHelpText>Id of the parent (umSite custom setting).</inlineHelpText>
        <label>umSite Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>zoneDescription__c</fullName>
        <label>zoneDescription</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>zone__c</fullName>
        <description>Zone id.</description>
        <inlineHelpText>Zone id.</inlineHelpText>
        <label>Zone Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>umZone</label><visibility>Public</visibility></CustomObject>